# backlight-ctl

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  backlight.service
src/: client.c  client.h  context.c  context.h  defines.h  enums.h  fstools.c  fstools.h  includes.h  main.c  server.c  server.h  statics.c  statics.h  structs.h  typedefs.h  usage.c  usage.h
