cmake_minimum_required(VERSION 3.5)
project(backlight-ctl)

set(CMAKE_C_COMPILER "/usr/bin/gcc")
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu${CMAKE_C_STANDARD}")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Os")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g0")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pedantic")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wextra")
file(GLOB SOURCES "${CMAKE_SOURCE_DIR}/src/*.c")

add_executable(backlight-ctl ${SOURCES})
